--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "@types/express": "^4.17.0",
     "@types/mongodb": "^3.1.29",
     "body-parser": "^1.19.0",
-    "bootstrap": "4.1.1",
+    "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.3.0-beta2",
     "ngx-bootstrap": "^5.1.0",
+    "ngx-toastr": "^10.0.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
